# sound-board-rs

./: Cargo.toml  Readme.md
config/: example.toml
src/: main.rs  midi.rs  settings.rs
src/launchpad/: colors.rs  error.rs  launchpad_mini.rs  mod.rs
src/sound_board/: mod.rs
src/tracks/: fire.rs  fire_and_forget.rs  mod.rs  toggle.rs
